@@ -2,6 +2,8 @@
  * Agregar los mensajes que faltan
 
 = v00007g =
+@ 08/05/2018 - AGALAZ
+ * Se agrega clase CallPushService
 @ 02/05/2018 - AGALAZ
  * Se corrige error de UNSIGNED en EndosoFactura
 
